good understanding why we multiply by batch size

--- a/Gradient_testing.ipynb
+++ b/Gradient_testing.ipynb
@@ -66,13 +66,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "Nbatch = 10\n",
     "D_in = 2\n",
     "D_out = 1\n",
+    "\n",
+    "loss_type = 'TSE'\n",
     "\n",
     "linear_model = torch.nn.Sequential(\n",
     "    torch.nn.Linear(D_in, D_out, bias=False),\n",
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,12 +121,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss_type = 'TSE'\n",
-    "\n",
     "loss_fun = loss_functions[loss_type]\n",
     "loss_grad = loss_gradients[loss_type]\n",
     "\n",
@@ -141,70 +141,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gradient_passed_to_hook = EKFAC_lin.stored_items[list(EKFAC_lin.stored_items.keys())[0]]['grad_wrt_output']\n",
-    "gradient_analytic = loss_grad(y, y_mod, Nbatch)"
+    "with torch.no_grad():\n",
+    "    gradient_saved_by_hook = EKFAC_lin.stored_items[list(EKFAC_lin.stored_items.keys())[0]]['grad_wrt_output']\n",
+    "    gradient_analytic = loss_grad(y, y_mod, Nbatch)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[  0.7901],\n",
-       "        [-14.3245],\n",
-       "        [-15.9768],\n",
-       "        [ 17.5171],\n",
-       "        [-16.2203],\n",
-       "        [ 10.7378],\n",
-       "        [ -6.6827],\n",
-       "        [  9.1003],\n",
-       "        [ 10.4937],\n",
-       "        [ -0.4674]])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient saved by hook: tensor([[-3.6643e+01, -1.3093e+01, -4.2351e+01,  1.6123e-02, -5.3818e+00,\n",
+      "          9.6941e+00, -3.9953e+00,  2.3490e+01, -5.5934e+00, -2.1213e+01]])\n",
+      "Analytically calculated gradient: tensor([[-3.6643e+00, -1.3093e+00, -4.2351e+00,  1.6123e-03, -5.3818e-01,\n",
+      "          9.6941e-01, -3.9953e-01,  2.3490e+00, -5.5934e-01, -2.1213e+00]])\n"
+     ]
     }
    ],
    "source": [
-    "gradient_passed_to_hook"
+    "print('Gradient saved by hook: {}'.format(gradient_saved_by_hook.t()))\n",
+    "print('Analytically calculated gradient: {}'.format(gradient_analytic.t()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we can see that the ``gradient_analytic`` is a factor of 10 smaller the ``gradient_saved_by_hook``, which is the batch_size.  This is because we're multiplying the ``gradient_passed_to_hook`` by ``batch_size`` before saving the gradient.  We can see that this is true regardless of whether we use MSE or TSE.   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, from the EKFAC paper, we know that if we define, for a linear layer, $h$ as the input to that layer, and $\\delta$ as the derivative of the loss function with respect to that layer, then the gradient of the loss function with respect to the weight parameter of the layer is given by $h\\delta^T$.  Let's see if that holds true currently.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the case of a single linear layer, $h$ is given by $x$, the input to the network, and $\\delta$ is given by the analytically calculated gradient above.  To average over the mini-batch, we divide finally by the input size, ``x.size(0)``."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_weight_grad = x.t() @ gradient_saved_by_hook / x.size(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.0790],\n",
-       "        [-1.4325],\n",
-       "        [-1.5977],\n",
-       "        [ 1.7517],\n",
-       "        [-1.6220],\n",
-       "        [ 1.0738],\n",
-       "        [-0.6683],\n",
-       "        [ 0.9100],\n",
-       "        [ 1.0494],\n",
-       "        [-0.0467]], grad_fn=<MulBackward0>)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W.grad: tensor([[10.7965, -1.1092]])\n",
+      "test W grad: tensor([[10.7965],\n",
+      "        [-1.1092]])\n"
+     ]
     }
    ],
    "source": [
-    "gradient_analytic"
+    "print('W.grad: {}'.format(W.grad))\n",
+    "print('test W grad: {}'.format(test_weight_grad))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From this, we can see why we had to multiply by the batch size earlier, that is, why we needed the ``gradient_saved_by_hook`` to be a factor of ``batch_size`` larger than the true gradient of the loss function.  If we didn't do this, we'd get the wrong answer when we averaged $h\\delta^T$.  The reason is the following: what's stored in ``gradient_passed_to_hook`` is the gradient of the total loss function, $L$, with respect to the parameters.  But when we pass a vector with multiple inputs, i.e., a mini-batch, then what we actually want to store is the gradient of the function which is being averaged over to get $L$.  So if we write $L = \\frac{1}{N_B} \\sum_i L_i$, then we actually want to store the gradient of $L_i$, not the gradient of $L$.  This is why we multiply by $N_B$ before saving."
    ]
   },
   {
